--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "supertest": "^3.0.0"
   },
   "dependencies": {
+    "body-parser": "^1.17.2",
     "express": "^4.15.2",
     "sequelize": "^3.30.4",
     "sqlite3": "^3.1.8"
